# Mrecord

./: .gitignore  README.md  build.sh  dockerfile
mrecord-java/: .gitignore  pom.xml
mrecord-java/src/main/resources/: application.yaml  (+1 more)
mrecord-portal/: 404.html  index.html
mrecord-rust/: .gitignore  Cargo.toml  schema.sql
mrecord-rust/migration/: Cargo.toml
mrecord-rust/migration/src/: lib.rs  m20240604_000001_create_record.rs  m20240604_000002_create_core_tables.rs  m20240604_000003_create_sys_tables.rs  m20240604_000004_create_backup_tables.rs  m20260620_000001_money_decimal_text.rs
mrecord-rust/resources/mail/: mr-activate.html  mr-bookkeep.html  mr-password.html
mrecord-rust/src/: config.rs  db.rs  error.rs  main.rs
mrecord-rust/src/common/: mod.rs  money.rs  page.rs  res_code.rs  result.rs  user_context.rs
mrecord-rust/src/constant/: export_task.rs  mod.rs  template_item.rs  user_status.rs
mrecord-rust/src/entity/: fin_book.rs  fin_month_item_record.rs  fin_month_record.rs  fin_template_item.rs  mod.rs  record.rs  sys_backup_book.rs  sys_backup_month_item_record.rs  sys_backup_month_record.rs  sys_backup_template_item.rs  sys_config.rs  sys_export_task.rs  sys_user.rs  sys_user_operate_log.rs
mrecord-rust/src/handler/: fin_book.rs  fin_month_item_record.rs  fin_month_record.rs  fin_template_item.rs  mod.rs  record.rs  sys_config.rs  sys_export_task.rs  sys_user_operate_log.rs  user.rs
mrecord-rust/src/middleware/: log.rs  mod.rs
mrecord-rust/src/model/: email.rs  export_task.rs  finance.rs  id_dto.rs  mail_params.rs  mod.rs  page_info.rs  record.rs  site.rs  sys_user_operate_log.rs  user.rs
mrecord-rust/src/router/: mod.rs
mrecord-rust/src/service/: email.rs  export_task.rs  mod.rs  monthly_reminder_task.rs  sys_config.rs  sys_user_operate_log.rs
mrecord-rust/src/util/: jwt.rs  mod.rs  token.rs
mrecord-sql/: README.md
mrecord-sql/all/DDL/: ddl.sql
mrecord-vue/: .env  .env.development  .env.production  .gitignore  README.md  components.d.ts  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
mrecord-vue/doc/: ENV_GUIDE.md  QUICK_REFERENCE.md  SECURITY.md
mrecord-vue/src/: App.vue  main.ts  style.css
mrecord-vue/src/api/: index.ts  types.ts
mrecord-vue/src/assets/: agreement.md
mrecord-vue/src/components/: AgreementPopup.vue  AuthLayout.vue  BookCard.vue  IconPicker.vue  PageHeader.vue  TrendChart.vue
mrecord-vue/src/router/: index.ts
mrecord-vue/src/stores/: user.ts
mrecord-vue/src/types/: varlet.d.ts
mrecord-vue/src/utils/: format.ts  index.ts  request.ts  security.ts
mrecord-vue/src/views/: ActivateAccount.vue  AdminConfigPage.vue  AdminEmailConfigPage.vue  AdminLogsPage.vue  AdminPage.vue  AdminSiteConfigPage.vue  AdminUsersPage.vue  BookPage.vue  BookRecordPage.vue  BookStatsDetail.vue  ChangePassword.vue  ExportPage.vue  ForgotPassword.vue  Home.vue  HomePage.vue  Layout.vue  Login.vue  NotFound.vue  ProfileEditPage.vue  ProfilePage.vue  RecordPage.vue  Register.vue  ResetPassword.vue  StatsPage.vue  SystemInitPage.vue  TempItemEditor.vue
(+130 files in other folders)
