[workspace]
resolver = "2"
members = [".", "migration"]

[package]
name = "mrecord-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
migration = { path = "migration" }
