[workspace]
resolver = "2"
members = [".", "migration"]

[package]
name = "mrecord-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
migration = { path = "migration" }
# 用户模块所需依赖
# bcrypt: 密码哈希（对应 Java BCrypt）
bcrypt = "0.15"
# jsonwebtoken: JWT 生成与解析（对应 Java io.jsonwebtoken）
jsonwebtoken = "9"
# uuid: 生成用户主键（对应 Java IdUtil.simpleUUID）
uuid = { version = "1", features = ["v4"] }
# regex: 邮箱格式校验（替代 Java Validator.isEmail）
regex = "1"
# once_cell: 进程级常量缓存（用于编译一次的 Regex）
once_cell = "1"
# 邮件模块所需依赖
# lettre: SMTP 客户端（对应 Java apache-commons-email 的 HtmlEmail）
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }
# 导出任务模块所需依赖
# rust_xlsxwriter: 生成 Excel 文件（对应 Java EasyExcel / POI 导出能力）
rust_xlsxwriter = "0.88"
# 静态资源模块所需依赖
# tower-http: 托管前端构建产物（对应 Java static resources）
tower-http = { version = "0.5", features = ["fs"] }
